--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 </head>
 <body>
   <h1>Gestor de tareas</h1>
+  <h3>Autor: Tu Nombre</h3>
+
   <p class="muted">Plantilla base para la actividad de Git. Completa las funciones marcadas como <strong>TODO</strong>.</p>
 
   <div class="panel">
